--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,7 @@
         <script src="app/controllers/main.controller.js"></script>
         <script src="app/controllers/header.controller.js"></script>
         <script src="app/controllers/reddit.controller.js"></script>
+        <script src="app/factories/reddit.factory.js"></script>
 
         <!-- endinjector -->
         <!-- endbuild -->
