--- a/client/index.html
+++ b/client/index.html
@@ -25,12 +25,12 @@
     <!-- endbuild -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
   </head>
-  <body ng-app="materialApp">
+  <body ng-app="materialApp" layout="column" flex>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <audio id="player"></audio>
-    <div ui-view></div>
+    <div ui-view  layout="column" flex></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
