--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-audio/app/angular.audio.js"></script>
+      <script src="bower_components/underscore/underscore-min.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
         <script src="//cdn.jsdelivr.net/angular-material-icons/0.4.0/angular-material-icons.min.js"></script>
